@@ -1,17 +1,17 @@
 package edu.arep.service;
 
 import edu.arep.persistence.StreamPersistence;
-
-import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
 import org.bson.Document;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
-@ApplicationScoped
 public class StreamService {
+    private StreamPersistence persistence;
 
-    @Inject
-    StreamPersistence persistence;
+    public StreamService(StreamPersistence persistence) {
+        this.persistence = persistence;
+    }
 
     public List<Document> getLastPosts(){
         return persistence.getLastPosts().stream().map((Document d) -> {
@@ -20,6 +20,6 @@ public class StreamService {
             newDocument.put("content", d.get("content"));
             newDocument.put("creationDate", d.get("creationDate"));
             return newDocument;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 }
